modified to add exact # of days I snorkeled prior to return

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
     </head>
     <body>
         <h1>The trip there</h1>
-        <p>Towards the end of my trip to Thailand, having heard that there was some good snorkeling 
-         around the Similian islands 40 or so miles off the west coast of the Thai peninsula, I decided to give it a go.  
+        <p>Towards the end of my trip to Thailand with 5 days left before I return to the US, I had heard that there was some good snorkeling 
+         around the Similian islands 40 or so miles off the west coast of the Thai peninsula, so I decided to give it a go.  
          The seas had been a bit choppy, waves 2 to 4 feet, but I didn’t have many days left so I booked a day trip on one of the speed boat/snorkeling tours.
          Abraham, the dutch owner of the tour company, gave me the best advice and told me that since it would 
          be a rather rough two and a half hour trip out there, I should sit as close to the stern of the boat as possible.
